--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         
     </head>
     <body>
+        <header> <!--parte fopra con bottone upgrade-->
+            <a href="https://it.pornhubpremium.com/premium_signup?join=42" class="upgrade">EFFETTUA L'UPGRADE</a>
+        </header>
         <nav></nav>
-        
+        <main></main>
+        <footer></footer>  
     </body>
 </html>
