iniziata sezione nav

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
         <header> <!--parte fopra con bottone upgrade-->
             <a href="https://it.pornhubpremium.com/premium_signup?join=42" class="upgrade">EFFETTUA L'UPGRADE</a>
         </header>
-        <nav></nav>
+        <aside>
+            <div class="logo">
+            <img class="principal-logo" src="./img/logo.svg" alt="logo">
+            <img class="secondary-logo" src="./img/logo-small.svg" alt="logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>Cerca</li>
+                    <li><a href="#"></a>La tua libreria</li>
+                </ul>
+            </nav>
+        </aside>
         <main></main>
         <footer></footer>  
     </body>
