continuata sezione nav (mancante parte bassa)

--- a/index.html
+++ b/index.html
@@ -29,10 +29,21 @@
             <img class="secondary-logo" src="./img/logo-small.svg" alt="logo">
             </div>
             <nav>
-                <ul>
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>Cerca</li>
-                    <li><a href="#"></a>La tua libreria</li>
+                <ul class="first-nav nav  margin-left-20">
+                    <li><img src="./img/home.svg" alt="home"><a href="#">Home</a></li>
+                    <li><img src="./img/search.svg" alt="search"><a href="#">Cerca</a></li>
+                    <li><img src="./img/libreria.svg" alt="libreria"><a href="#">La tua libreria</a></li>
+                </ul>
+                <span class="margin-left-20"><strong>PLAYLIST</strong></span>
+                <ul class="nav margin-left-20">
+                    <li><i class="fas fa-plus-square"></i><a href="#">Crea Playlist</a></li>
+                    <li><a href="#">Coez Mix</a></li>
+                    <li><a href="#">Jovanotti Mix</a></li>
+                    <li><a href="#">Muse Mix</a></li>
+                    <li><a href="#">Chillout Daily</a></li>
+                    <li><a href="#">Disco 90's-00's</a></li>
+                    <li><a href="#">Amore Indie</a></li>
+                    <li><a href="#">Anni 00</a></li>
                 </ul>
             </nav>
         </aside>
