nav completa (manca da camb.colore)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                     <li><a href="#">Amore Indie</a></li>
                     <li><a href="#">Anni 00</a></li>
                 </ul>
+                <div class="profile-download margin-left-20">
+                    <img class="small-logo" src="./img/download.svg" alt="download logo"> Installa app
+                    <hr>
+                    <span class="profile-image"><img src="./img/profile.svg" alt="image profile"></span> <strong>Giordano Rinaldi</strong>
+                </div>
             </nav>
         </aside>
         <main></main>
