nav completata (da agg.eff.hover)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -23,20 +22,22 @@
         <header> <!--parte fopra con bottone upgrade-->
             <a href="https://it.pornhubpremium.com/premium_signup?join=42" class="upgrade">EFFETTUA L'UPGRADE</a>
         </header>
-        <aside>
+        <aside class="margin-left-20">
             <div class="logo">
             <img class="principal-logo" src="./img/logo.svg" alt="logo">
             <img class="secondary-logo" src="./img/logo-small.svg" alt="logo">
             </div>
             <nav>
-                <ul class="first-nav nav  margin-left-20">
+                <ul class="first-nav nav">
                     <li><img src="./img/home.svg" alt="home"><a href="#">Home</a></li>
                     <li><img src="./img/search.svg" alt="search"><a href="#">Cerca</a></li>
                     <li><img src="./img/libreria.svg" alt="libreria"><a href="#">La tua libreria</a></li>
                 </ul>
-                <span class="margin-left-20"><strong>PLAYLIST</strong></span>
-                <ul class="nav margin-left-20">
-                    <li><i class="fas fa-plus-square"></i><a href="#">Crea Playlist</a></li>
+                <span><strong>PLAYLIST</strong></span>
+                <div class="playlist-create">
+                    <span class="square">&plus;</span><a href="#">Crea Playlist</a>
+                </div>    
+                <ul class="nav playlist">
                     <li><a href="#">Coez Mix</a></li>
                     <li><a href="#">Jovanotti Mix</a></li>
                     <li><a href="#">Muse Mix</a></li>
@@ -45,7 +46,7 @@
                     <li><a href="#">Amore Indie</a></li>
                     <li><a href="#">Anni 00</a></li>
                 </ul>
-                <div class="profile-download margin-left-20">
+                <div class="profile-download">
                     <img class="small-logo" src="./img/download.svg" alt="download logo"> Installa app
                     <hr>
                     <span class="profile-image"><img src="./img/profile.svg" alt="image profile"></span> <strong>Giordano Rinaldi</strong>
