aggiunto hover alla nav + fix classi css

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <img class="secondary-logo" src="./img/logo-small.svg" alt="logo">
             </div>
             <nav>
-                <ul class="first-nav nav">
-                    <li><img src="./img/home.svg" alt="home"><a href="#">Home</a></li>
+                <ul class="first-nav">
+                    <li><img src="./img/home.svg" alt="home"><a class="cazzo" href="#">Home</a></li>
                     <li><img src="./img/search.svg" alt="search"><a href="#">Cerca</a></li>
                     <li><img src="./img/libreria.svg" alt="libreria"><a href="#">La tua libreria</a></li>
                 </ul>
@@ -37,7 +37,7 @@
                 <div class="playlist-create">
                     <span class="square">&plus;</span><a href="#">Crea Playlist</a>
                 </div>    
-                <ul class="nav playlist">
+                <ul class="playlist">
                     <li><a href="#">Coez Mix</a></li>
                     <li><a href="#">Jovanotti Mix</a></li>
                     <li><a href="#">Muse Mix</a></li>
@@ -47,7 +47,7 @@
                     <li><a href="#">Anni 00</a></li>
                 </ul>
                 <div class="profile-download">
-                    <img class="small-logo" src="./img/download.svg" alt="download logo"> Installa app
+                    <img class="small-logo" src="./img/download.svg" alt="download logo"> <a href="#">Installa app</a> 
                     <hr>
                     <span class="profile-image"><img src="./img/profile.svg" alt="image profile"></span> <strong>Giordano Rinaldi</strong>
                 </div>
