aggiunta sezione footer di sinistra

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
             </nav>
         </aside>
         <main></main>
-        <footer></footer>  
+        <footer>
+            <div class="col-left">
+                <div class="image-mini">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273a43cd43ef4f3b2d5413b17f9" alt="album cover">
+                </div>
+                <div class="mini-titlesong">
+                    <strong>Human</strong>The killers</div>
+                    <div><a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a> 
+                </div>
+            </div>
+            <div class="col-center"></div>
+            <div class="col-right"></div>
+        </footer>  
     </body>
 </html>
