aggiunta sezione footer centrale

--- a/index.html
+++ b/index.html
@@ -63,7 +63,25 @@
                     <div><a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a> 
                 </div>
             </div>
-            <div class="col-center"></div>
+            <div class="col-center">
+                <div class="change-pause-song">
+                    <i class="fas fa-random"></i>
+                    <i class="fas fa-step-backward"></i>
+                    <i class="far fa-play-circle"></i>
+                    <i class="fas fa-step-forward"></i>
+                    <i class="fas fa-redo-alt"></i>
+                </div>
+                <div class="time-song">
+                    <div>0:25</div>
+                    <div class="bar-timing-song">
+                        <div class="timing-green">
+                            <div class="circle-timing"></div>
+                        </div>  
+                    </div>
+                    <div>4:35</div>
+                </div>
+
+            </div>
             <div class="col-right"></div>
         </footer>  
     </body>
