aggiunta sezione footer di dx

--- a/index.html
+++ b/index.html
@@ -82,7 +82,21 @@
                 </div>
 
             </div>
-            <div class="col-right"></div>
+            <div class="col-right">
+                <div class="icons">
+                    <i class="fas fa-list"></i>
+                    <i class="fas fa-tv"></i>
+                    <i class="fas fa-volume-up"></i>
+                </div>
+                <div class="time-song audio">
+                    <div class="bar-timing-song">
+                        <div class="timing-green">
+                            <div class="circle-timing"></div>
+                        </div>  
+                    </div>
+                </div>
+
+            </div>
         </footer>  
     </body>
 </html>
