--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="mini-titlesong">
                     <strong>Human</strong>The killers</div>
-                    <div><a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a> 
+                    <a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a> 
                 </div>
             </div>
             <div class="col-center">
