aggiunto hover al footer

--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
                     <img src="https://i.scdn.co/image/ab67616d0000b273a43cd43ef4f3b2d5413b17f9" alt="album cover">
                 </div>
                 <div class="mini-titlesong">
-                    <strong>Human</strong>The killers</div>
-                    <a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a> 
+                    <div class="titlesong">
+                        <strong>Human</strong><br>The killers
+                    </div>
+                    <div>
+                        <a href="#"><i class="far fa-heart"></i></a><a href="#"><i class="far fa-folder"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="col-center">
