aggiunta sezione cambio generi + hover+ fix header

--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
                 </div>
             </nav>
         </aside>
-        <main></main>
+        <main>
+            <div class="change-category">
+                <ul>
+                    <li><a href="#">IN EVIDENZA</a><div></div></li>
+                    <li><a href="#">PODCAST</a></li>
+                    <li><a href="#">CLASSIFICHE</a></li>
+                    <li><a href="#">GENERI E MOOD</a></li>
+                    <li><a href="#">NUOVE USCITE</a></li>
+                    <li><a href="#">SCOPRI</a></li>
+                </ul>
+            </div>
+        </main>
         <footer>
             <div class="col-left">
                 <div class="image-mini">
