aggiunta prima riga di album

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
                     <li><a href="#">SCOPRI</a></li>
                 </ul>
             </div>
+            <h2>Ascoltate di recente</h2>
+            <div class="first-section">
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+                <div class="album"></div>
+            </div>
+
         </main>
         <footer>
             <div class="col-left">
