aggiunto responsive a prima riga

--- a/index.html
+++ b/index.html
@@ -65,12 +65,72 @@
             </div>
             <h2>Ascoltate di recente</h2>
             <div class="first-section">
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
-                <div class="album"></div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                    </div>
+                    <div class="title">
+                        <strong>Breackfast in America</strong>
+                    </div>    
+                    <div class="subtitle">
+                        Supertramp
+                    </div>
+                </div>
             </div>
 
         </main>
