modiificate immagini + effetto hover

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <div class="album">
                     <div class="image-album">
                         <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
                         <strong>Breackfast in America</strong>
@@ -78,57 +81,72 @@
                 </div>
                 <div class="album">
                     <div class="image-album">
-                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <img src="https://www.allstoreshop.it/files/azelettronica_Files/Foto/93899_2.JPG" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
-                        <strong>Breackfast in America</strong>
+                        <strong>Jazz</strong>
                     </div>    
                     <div class="subtitle">
-                        Supertramp
+                        Queen
                     </div>
                 </div>
                 <div class="album">
                     <div class="image-album">
-                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/3/3b/Dark_Side_of_the_Moon.png" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
-                        <strong>Breackfast in America</strong>
+                        <strong>The Dark side of the Moon</strong>
                     </div>    
                     <div class="subtitle">
-                        Supertramp
+                        Pink Floyd
                     </div>
                 </div>
                 <div class="album">
                     <div class="image-album">
-                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <img src="./img/stranger.jpeg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
-                        <strong>Breackfast in America</strong>
+                        <strong>Stranger Things, Vol.1 (a Netflix Orifinal Series Soundtrack)</strong>
                     </div>    
                     <div class="subtitle">
-                        Supertramp
+                        Kyle Dixon & Michael Stein 
                     </div>
                 </div>
                 <div class="album">
                     <div class="image-album">
-                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/814evwDmxUL._AC_SL1425_.jpg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
-                        <strong>Breackfast in America</strong>
+                        <strong>The 2nd Law</strong>
                     </div>    
                     <div class="subtitle">
-                        Supertramp
+                        Muse
                     </div>
                 </div>
                 <div class="album">
                     <div class="image-album">
-                        <img src="./img/Supertramp_-_Breakfast_in_America.jpg" alt="">
+                        <img src="https://i.scdn.co/image/ab67616d0000b27364dce8596ce227e6bd6c2e80" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
                     </div>
                     <div class="title">
-                        <strong>Breackfast in America</strong>
+                        <strong>Le dimensioni del mio caos</strong>
                     </div>    
                     <div class="subtitle">
-                        Supertramp
+                        Caparezza
                     </div>
                 </div>
             </div>
