aggiunta seconda e terza riga + bordo rotondo

--- a/index.html
+++ b/index.html
@@ -150,6 +150,58 @@
                     </div>
                 </div>
             </div>
+            <h2>Creato per Giordano Rinaldi</h2>
+            <p class="margin-left-25">Piú ascolti, piú accurati saranno i suggerimenti</p>
+            <div class="first-section flex-start">
+                <div class="album">
+                    <div class="image-album">
+                        <img src="https://lineup-images.scdn.co/summer-rewind-2020_LARGE-it.jpg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class="title">
+                        <strong>Le tue hit estive del passato</strong>
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album">
+                        <img src="https://dailymix-images.scdn.co/v2/img/ab6761610000e5ebb506164c3174bb7123a41424/1/it/large" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class="title">
+                        <strong>Daily Mix 1</strong>
+                    </div>    
+                </div>
+            </div>
+            <h2>Artisti piú popolari</h2>
+            <p class="margin-left-25">Piú ascolti, piú accurati saranno i suggerimenti</p>
+            <div class="first-section flex-start">
+                <div class="album">
+                    <div class="image-album rounded">
+                        <img src="./img/youg.jpeg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class="title">
+                        <strong>Lana del Ray</strong>
+                    </div>
+                </div>
+                <div class="album">
+                    <div class="image-album rounded">
+                        <img src="./img/einaudi.jpeg" alt="">
+                        <div class="play-album">
+                            <i class="far fa-play-circle"></i>
+                        </div>
+                    </div>
+                    <div class="title">
+                        <strong>Ludovico einaudi</strong>
+                    </div>    
+                </div>
+            </div>
 
         </main>
         <footer>
