fix quadrato crea playlist:hover+agg barra su home

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
                 <span><strong>PLAYLIST</strong></span>
                 <div class="playlist-create">
-                    <span class="square">&plus;</span><a href="#">Crea Playlist</a>
+                    <a href="#"><span class="square">&plus;</span>Crea Playlist</a>
                 </div>    
                 <ul class="playlist">
                     <li><a href="#">Coez Mix</a></li>
